updated size and pricing filters

--- a/assets/scss/_shop.scss
+++ b/assets/scss/_shop.scss
@@ -5,6 +5,11 @@
     color: #010101 !important;
     
 }
+.scrollToTop{
+  background: none;
+  border: none;
+}
+
 .shop-top-bar {
   display: flex;
   justify-content: space-between;
