--- a/assets/scss/_product.scss
+++ b/assets/scss/_product.scss
@@ -1,4 +1,9 @@
 /*------- 6. Product style  --------*/
+.next-link{
+    width: 100%;
+    height: auto;
+    display: block;
+}
 .product-area {
     position: relative;
     .row{
