--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1724,7 +1724,7 @@ textarea:focus {
     transition: all 0.5s ease-in-out 0s;
     &:hover {
       border: 1px solid #25d366;
-      color: #fff;
+      color: #fff !important;
     }
     &::before,
     &::after {
