--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~swiper/swiper.scss";
+@import "~swiper/components/controller/controller.scss";
 @import "~animate.css/animate.min.css";
 @import "~lightgallery.js/dist/css/lightgallery.css";
 @import "../css/icons.min.css";
