--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -951,6 +951,7 @@
         &:hover {
             border: none;
             color: #fff;
+            background-color: #000;
         }
         @media #{$md-layout}{
             font-size: 10px;
