--- a/assets/scss/_my-account.scss
+++ b/assets/scss/_my-account.scss
@@ -1,4 +1,42 @@
 /*------ 25. My account Page  ------*/
+.account-page{
+  backdrop-filter: blur(20px);
+}
+.purchased-product-card{
+  display: inline-block !important;
+  width: 260px;
+    height: auto;
+  border-radius: 20px;
+  background: #eaeaea;
+box-shadow:  20px 20px 60px #c7c7c7, 
+             -20px -20px 60px #ffffff;
+             .ant-list-item-meta-description{
+               color:#3c3c3c
+             }
+             h4{
+               color:#ddbb74
+             }
+             
+             .puchased-image{
+              display: flex;
+              padding: 0 20%;
+             }
+             .ant-row {
+               img{
+                 width: 100%;
+               }
+               div:nth-child(1){
+                color:#ddbb74
+             }
+             div:nth-child(3){
+              color:#ddbb74
+             }
+             div:nth-child(2), div:nth-child(4){
+              color:#000
+           }
+            }
+            
+}
 .userarea-pill {
   color: #ddbb74;
   background: linear-gradient(80deg, #221e1c, #040303);
