--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -1097,8 +1097,8 @@
 .nav-style-3.owl-carousel > .owl-nav, .nav-style-3 .ht-swiper-button-nav {
     position: absolute;
     right: 0;
-    bottom: 10vmin;
-    left: 10vmin;
+    bottom: 0;
+    left: auto;
     top: auto;
     color: #000;
     border: none;
