--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,7 +21,7 @@
 @import "suscribe";
 @import "about";
 @import "image-slider";
-@import "testimonial";
+@import "ant";
 @import "brand-logo";
 @import "timers";
 @import "breadcrumb";
