--- a/assets/scss/_checkout.scss
+++ b/assets/scss/_checkout.scss
@@ -194,6 +194,24 @@
         }
       }
     }
+    &:after{
+      background: linear-gradient(-45deg, #ffffff 16px, transparent 0), linear-gradient(45deg, #ffffff 16px, transparent 0);
+      background-position: left-bottom;
+      background-repeat: repeat-x;
+      background-size: 32px 32px;
+      content: " ";
+      display: block;
+      position: absolute;
+      bottom: 0px;
+      left: 0px;
+      width: 100%;
+      height: 32px;
+    }
+  }
+  .payment-method{
+    border: 1px solid black;
+    border-radius: 10px;
+    background: white;
   }
   .payment-accordion {
     margin: 0 0 16px;
