--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -1897,3 +1897,34 @@ a.default-btn {
     border-radius: 50px;
   }
 }
+.stamp {
+  position: relative;
+  
+  &:after {
+    border: solid 0.1em #08520bb3;
+    border-radius: .2em;
+    color: #08520bb3;
+    content: 'Order Placed';
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 1;
+    opacity: 0;
+    position: absolute;
+    padding: .1em .5em;
+    margin: 0 auto;
+    top: 10%;
+    left: 10%;
+    text-transform: uppercase;
+    opacity: 0;
+    transform-origin: 50% 50%;
+    transform: rotate(-2deg) scale(5);
+    transition: all .3s cubic-bezier(0.6, 0.04, 0.98, 0.335);
+  }
+
+}
+
+.loaded .stamp:after {
+    opacity: .75;
+    transform: rotate(-15deg) scale(1);
+    z-index: 0;
+ }
