--- a/assets/scss/_my-account.scss
+++ b/assets/scss/_my-account.scss
@@ -28,6 +28,9 @@ box-shadow:  20px 20px 60px #c7c7c7,
                div:nth-child(1){
                 color:#ddbb74
              }
+             .ant-list-item-meta-description{
+              cursor: pointer;
+             }
              div:nth-child(3){
               color:#ddbb74
              }
