--- a/assets/scss/_my-account.scss
+++ b/assets/scss/_my-account.scss
@@ -1,6 +1,58 @@
 /*------ 25. My account Page  ------*/
 .account-page{
   backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+}
+.orders-wrapper{
+  width: 100vmin;
+  .title-card{
+    background: black;
+    border-radius: 10px 10px 0px 0px;
+    color: #ddbb74;
+  }
+.orders-container{
+  display: flex;
+  border-radius: 10px;
+  background: #eaeaea;
+  overflow-x: scroll;
+  .owl-nav{
+    top: 4%;
+  }
+  &::-webkit-scrollbar-track
+  {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #0b0909;
+  }
+  &::-webkit-scrollbar
+  {
+    width: 10px;
+    background-color: #d7b671;
+  }
+  &::-webkit-scrollbar-thumb
+  {
+    background-color: #d7b671;
+    
+    background-image: -webkit-gradient(linear, 0 0, 0 100%,
+                       color-stop(.5, rgba(255, 255, 255, .2)),
+               color-stop(.5, transparent), to(transparent));
+  }
+}
+// .purchased-swiper-button-nav{
+//   position: absolute;
+//     top: 50%;
+//     width: 50px;
+//     height: 50px;
+//     margin-top: -22px;
+//     z-index: 10;
+//     cursor: pointer;
+//     background-size: 50px 50px;
+//     background-position: center center;
+//     background-repeat: no-repeat;
+//     &.swiper-button-prev{
+//       right: 10px;
+//       left: auto;
+//     }
+// }
 }
 .purchased-product-card{
   display: inline-block !important;
@@ -8,8 +60,7 @@
     height: auto;
   border-radius: 20px;
   background: #eaeaea;
-box-shadow:  20px 20px 60px #c7c7c7, 
-             -20px -20px 60px #ffffff;
+box-shadow:  -1px -2px 0px #c7c7c7, 2px 2px 0px #c5c4c4;
              .ant-list-item-meta-description{
                color:#3c3c3c
              }
