Navigation Links and Search bar UI fix

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @import "helper";
 @import "common";
 @import "preloader";
+@import "menu-cart";
 @import "header";
 @import "slider";
 @import "support";
