--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -609,120 +609,7 @@
         &:hover > button {
             color: $theme-color;
         }
-        .shopping-cart-content{
-            background: #fff none repeat scroll 0 0;
-            border: 1px solid #ebebeb;
-            border-radius: 5px;
-            opacity: 0;
-            visibility: hidden;
-            padding: 10px 35px 10px;
-            position: absolute;
-            right: 0;
-            top: 190%;
-            width: 340px;
-            z-index: 9999;
-            transform: rotateX(90deg);
-            transform-origin: center top 0;
-            transition: all 0.5s ease 0s;
-            &.cart-visible, &.active  {
-                opacity: 1;
-                visibility: visible;
-                transform: rotateX(0deg);
-            }
-            @media #{$xs-layout} {
-                width: 295px;
-                right: -52px;
-                padding: 31px 15px 10px;
-                overflow-y: auto;
-                height: 300px;
-                top: 100%;
-                margin-top: 14px;
-            }
-            @media #{$md-layout} {
-                overflow-y: auto;
-                height: 300px;
-                margin-top: 18px;
-                top: 100%;
-                margin-top: 14px;
-            }
-            @media #{$lg-layout} {
-                overflow-y: auto;
-            }
-            ul {
-                padding-top: 20px;
-                max-height: 400px;
-                overflow-y: auto;
-                padding-right: 15px;
-                margin-right: -15px;
-                li {
-                    border-bottom: 1px solid #ebebeb;
-                    display: flex;
-                    flex-wrap: nowrap;
-                    margin-bottom: 20px;
-                    padding-bottom: 15px;
-                    position: relative;
-                    .shopping-cart-img {
-                        flex: 0 0 82px;
-                        margin-right: 15px;
-                    }
-                    .shopping-cart-title {
-                        h4 {
-                            font-size: 15px;
-                            line-height: 16px;
-                            margin: 0;
-                            margin-right: 20px;
-                            a {
-                                color: #000;
-                                line-height: 1.2;
-                                &:hover {
-                                    color: $theme-color;
-                                }
-                            }
-                        }
-                        h6 {
-                            font-size: 13px;
-                            margin: 5px 0 8px;
-                        }
-                        span {
-                            font-size: 14px;
-                        }
-                    }
-                    .shopping-cart-delete {
-                        position: absolute;
-                        top: 0;
-                        right: 0;
-                        a, button {
-                            font-size: 16px;
-                            color: $theme-color;
-                            &:hover {
-                                color: #333;
-                            }
-                        }
-                    }
-                }
-            }
-            .shopping-cart-total {
-                h4 {
-                    font-size: 14px;
-                    margin-top: 17px;
-                    margin-bottom: 17px;
-                    span {
-                        float: right;
-                        
-                    }
-                }
-            }
-            .shopping-cart-btn {
-                margin-top: 23px;
-                a {
-                    margin-bottom: 20px;
-                    padding: 16px 40px 17px;
-                    font-weight: 500;
-                    font-size: 14px;
-                    display: block;
-                }
-            }
-        }
+//removed shopping-cart-content        
     }
     &.header-right-wrap-white {
         margin-top: 40px;
@@ -2374,5 +2261,13 @@ header.header-area.sticky-bar.header-padding-3.header-res-padding.clearfix.trans
                 }
             }
         }
+    }
+}
+
+// Search Modal
+.search-modal{
+    .modal-content,.modal-body{
+        background: #000000;
+        border-radius: 10px;
     }
 }
