--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1425,23 +1425,9 @@ header.header-area.sticky-bar.header-padding-3.header-res-padding.clearfix.trans
 .clickable-mainmenu {
 	background: rgba(255, 255, 255, 1) none repeat scroll 0 0;
 	color: #353535;
-	height: 100vh;
-	padding: 130px 35px 40px;
-    position: fixed;
-	left: 0;
-	top: 0;
-	transform: translateX(-110%);
+	
 	transition: transform 0.5s ease-in-out 0s;
-	width: 300px;
-    z-index: 9999;
-    margin-top: 0;
-    &.inside {
-        transform: translateX(0);
-	    z-index: 9999;
-    }
-    @media #{$xs-layout}{
-		padding: 100px 35px 40px;
-	}
+
     .clickable-mainmenu-icon {
         button {
             background: transparent none repeat scroll 0 0;
@@ -1969,32 +1955,39 @@ header.header-area.sticky-bar.header-padding-3.header-res-padding.clearfix.trans
   }
   
   .offcanvas-wrapper{
-    overflow: auto;
-    height: 100%;
+      position: fixed;
+    overflow: hidden;
+    height: 100vh;
     border-radius: 50px 0px 0px 50px;
-    background: #ffffff;
-    box-shadow: 20px 20px 60px #d9d9d963, -20px -20px 60px #ffffff5e;
+    
+    
   }
-  
+  .close-drawer-wrapper{
+    position: fixed;
+    right: 77vmin;
+    top: 3vh;
+    z-index: 2;
+  }
   .offcanvas-mobile-search-area{
     border-radius: 10px 10px 10px 10px;
     background: #e6e6e6;
-    box-shadow: 20px 20px 60px #c4c4c4, -20px -20px 60px #ffffff54;
+    box-shadow: 1px 1px 0px #c4c4c4, -20px -20px 0px #ffffff54;
     padding: 10px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: calc(100% - 60px);
+    position: fixed;
+    top: 3vmin;
+    right: 10vmin;
+    margin-bottom: 10px;
+    width: 62vmin;
     z-index: 9;
-    margin-left: 60px;
+    
   
     input{
         width: 100%;
         font-size: 16px;
         display: block;
-        padding: 9px 25px;
+        padding: 9px 14px;
         color: #222;
-        background: #e6e6e6;
+        background: none;
         border: none;
   
         @media #{$sm-layout}{
@@ -2022,7 +2015,7 @@ header.header-area.sticky-bar.header-padding-3.header-res-padding.clearfix.trans
   }
   
   .offcanvas-inner-content{
-    padding: 90px 35px 0;
+    padding: 0px 35px 0;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -2033,7 +2026,12 @@ header.header-area.sticky-bar.header-padding-3.header-res-padding.clearfix.trans
   }
   
   .offcanvas-navigation{
-    margin-bottom: 50px;
+    margin: 100px 0px 0px 0px;
+    .username-row{
+        text-transform: none;
+        font-family: "Helvetica Neue";
+        font-weight: bold;
+    }
     & > ul{
          li{
             &.menu-item-has-children{
