--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Font Family
-$poppins: "Poppins", sans-serif;
+$poppins: "Helvetica Neue", sans-serif;
 $abrilfatface: "Abril Fatface", cursive;
 $cormorantgaramond: "Cormorant Garamond";
 
@@ -32,7 +32,3 @@ $md-layout: "only screen and (min-width: 768px) and (max-width: 991px)";
 $xs-layout: "only screen and (max-width: 767px)";
 $sm-layout: "only screen and (min-width: 576px) and (max-width: 767px)";
 $xxs-layout: "only screen and (min-width: 320px) and (max-width: 479px)";
-
-:root {
-  --wine: #5e1224;
-}
